--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "PORT=8000 node ./bin/www",
+    "start": "node ./bin/www",
     "web": "npx webpack"
   },
   "dependencies": {
